2010-02-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-09
	* fix diff, properly handle OutputModules within reference
	containers

	* tag V01-03-08
	* further Edgar bug activities
	* fix --input file:dummy.root functionality (OfflineConverter)
	* make streams and datasets PSets (and contained parameters)
	tracked

2010-02-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-07
	* *really* fix the Edgar bug!

2010-02-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-06
	* fix the Edgar bug ;)

	* tag V01-03-05
	* gui: fix 'do you want to save' popup if nothing changed (Vasu)
	* gui: search extended to contents, streams, PDs, OMs
	* gui: contents can be reorderd (affectring stream/PD/OM order as
	well!)
	* gui: unreferenced OMs appear red now
	* gui: OMs can now be removed from Pats / Sequences
	* data: fix in ReferenceContainer.unresolvedInputTags: consider
	OMs

2010-01-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-04
	* bugfix: mark Stream properly as changed if the fractioToDisc
	parameter was changed.

2010-01-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-03
	* gui: fix for problem with ECs associated with Paths not being saved
	properly (by Vasu)
	

2010-01-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-02
	* fix ConfigurationModifier to properly handle blocks again

	* tag V01-03-01
	* temporary fix to HtmlOutputWriter by Ulf
	* fix OnlineConverter: properly set the path to be an endpath, as
	the automatic detection won't work anymore
	* add --orcoff option to test/runOnlineConverter

2010-01-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-00
	* first production version of ConfDB V1, including countless
	features, improvements and fixes by Vasu

2009-12-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-02-05